--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,17 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>DataClean</module>
+        <module>DataCleanScala</module>
+        <module>dataReport</module>
     </modules>
 
 
     <dependencyManagement>
        <dependencies>
+           <dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-web</artifactId>
+           </dependency>
            <dependency>
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-java</artifactId>
@@ -88,8 +94,84 @@
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
-               <version>1.2.44</version>
+               <version>1.2.56</version>
+           </dependency>
+           <!--flink es依赖-->
+           <dependency>
+               <groupId>org.apache.flink</groupId>
+               <artifactId>flink-connector-elasticsearch6_2.11</artifactId>
+               <version>1.6.1</version>
            </dependency>
        </dependencies>
     </dependencyManagement>
+    <build>
+        <plugins>
+            <!-- 编译插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!-- scala编译插件 -->
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <version>3.1.6</version>
+                <configuration>
+                    <scalaCompatVersion>2.11</scalaCompatVersion>
+                    <scalaVersion>2.11.12</scalaVersion>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>compile-scala</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile-scala</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- 打jar包插件(会包含所有依赖) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <!--<archive>-->
+                    <!--<manifest>-->
+                    <!--&lt;!&ndash; 可以设置jar包的入口类(可选) &ndash;&gt;-->
+                    <!--<mainClass>xuwei.tech.streaming.SocketWindowWordCountJava</mainClass>-->
+                    <!--</manifest>-->
+                    <!--</archive>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
